[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "yoytools"
version = "2.4"
authors = [
  { name = "player210", email = "notyourdamn@business.com" },
]
description = "yoytools"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/player2I0/yoytools"
Issues = "https://github.com/player2I0/yoytools/issues"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/yoyrogue", "src/yoytools"]

